--- a/SpMedgroup-API/Senai_Semestre2_Sprint2/Senai_Semestre2_Sprint2/Properties/launchSettings.json
+++ b/SpMedgroup-API/Senai_Semestre2_Sprint2/Senai_Semestre2_Sprint2/Properties/launchSettings.json
@@ -2,9 +2,9 @@
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false, 
-    "anonymousAuthentication": true, 
+    "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:64582",
+      "applicationUrl": "http://192.168.3.48:64582",
       "sslPort": 0
     }
   },
@@ -21,7 +21,7 @@
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "api/values",
-      "applicationUrl": "http://localhost:5000",
+      "applicationUrl": "http://192.168.3.48:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
